workspace = { members = ["oricalchum", "oricalchum_derive"] }
[package]
name = "oricalchum_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.82"
tokio = { version = "1.40.0", features = ["full"] }
oricalchum = {path = "oricalchum"}
oricalchum_derive = {path = "oricalchum_derive"}
reqwest = {version = "0.12.8", features = ["default"]}
