[package]
name = "oricalchum"
version = "0.1.1"
authors = ["Jordan Dimitrov"]
description = "A lightweight actor model"
license = "MIT"
repository = "https://github.com/Jordan-Dimitrov/Oricalchum"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.82"
tokio = { version = "1.40.0", features = ["full"] }