[package]
name = "oricalchum_derive"
version = "0.1.0"
authors = ["Jordan Dimitrov"]
description = "Procedural macros for oricalchum"
license = "MIT"
repository = "https://github.com/Jordan-Dimitrov/Oricalchum"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.82"
syn = "2.0"
quote = "1.0"
oricalchum = { version = "0.1.0", path = "../oricalchum" }